fix(TER-21): Removing more overflow and adding making responsive

--- a/public/global.css
+++ b/public/global.css
@@ -3,7 +3,8 @@
   -webkit-user-select: none;
 }
 
-body {
+body,
+html {
   color: #333;
   margin: 0;
   padding: 0;
